# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
# 
#   http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

cmake_minimum_required (VERSION 3.18)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(MyMasterApplication VERSION 1.0 LANGUAGES CXX)

find_package(onika REQUIRED)

add_executable(mymasterapp main.cpp)
target_compile_options(mymasterapp PUBLIC ${ONIKA_COMPILE_OPTIONS})
target_compile_definitions(mymasterapp PUBLIC ${ONIKA_COMPILE_DEFINITIONS})
target_include_directories(mymasterapp PUBLIC ${ONIKA_INCLUDE_DIRS})
target_link_directories(mymasterapp PUBLIC ${ONIKA_LIBRARY_DIRS})
target_link_libraries(mymasterapp PUBLIC ${ONIKA_LIBRARIES})

